# AtlasRacing-Product

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
dashboard/: run-windows.bat  run.sh  setup_msys2.bat
dashboard/backend/: CMakeLists.txt
dashboard/backend/include/telemetry/: accurate_lap_predictor.h  data_processor.h  live_analysis_processor.h  pit_strategy_calculator.h  sqlite_store.h  udp_receiver.h  websocket_server.h
dashboard/backend/src/: main.cpp  main_unified.cpp
dashboard/backend/src/core/: accurate_lap_predictor.cpp  data_processor.cpp  http_server.cpp  live_analysis_processor.cpp  packet_parser.cpp  pit_strategy_calculator.cpp  simple_websocket.cpp  udp_receiver.cpp  websocket_server.cpp
dashboard/backend/src/f1_24/: f1_24_parser.cpp  f1_24_types.h
dashboard/backend/src/games/ac/: ac_parser.cpp  ac_shared_memory.cpp  ac_shared_memory.h  ac_types.h  config.json
dashboard/backend/src/games/acc/: acc_parser.cpp  acc_shared_memory.cpp  acc_shared_memory.h  acc_types.h
dashboard/backend/src/games/ats/: ats_parser.cpp  ats_shared_memory.cpp  ats_shared_memory.h  ats_types.h
dashboard/backend/src/storage/: sqlite_store.cpp
dashboard/favicon/: site.webmanifest
dashboard/frontend/: .env.example  package.json  tailwind.config.js  tsconfig.json
dashboard/frontend/buildResources/: icon.icns
dashboard/frontend/electron/: main.js  preload.js  splash.html
dashboard/frontend/public/: index.html  manifest.json  service-worker.js  splash.html
dashboard/frontend/src/: App.tsx  index.css  index.tsx  react-app-env.d.ts
dashboard/frontend/src/components/: BroadcastPanel.tsx  DashboardBuilder.tsx  DashboardScaler.tsx  DashboardSelection.tsx  DevModeAtlasLinkPanel.tsx  DevModeDashboard.tsx  DevModeTrackMap.tsx  ERSStrategyPanel.tsx  EngineerChat.tsx  F1ProDashboard.tsx  GPRaceBoard.tsx  GTEnduranceDashboard.tsx  GameDetails.tsx  InputTelemetry.tsx  LiveRaceAnalysis.tsx  MainMenu.tsx  MinimalHUD.tsx  QRCodePanel.tsx  RaceControlDashboard.tsx  ResearchReviewPanel.tsx  SetupGuide.tsx  StrategyPanel.tsx  TrackMapWithDrivers.tsx
dashboard/integrations/AtlasLink/: README.md
dashboard/ml_service/: requirements.txt  server.py
dashboard/ml_service/adapters/: __init__.py  telemetry_adapter.py
dashboard/ml_service/models/: __init__.py  overtake_advisor.py  pace_predictor.py  tire_degradation.py
dashboard/ml_service/strategy/: __init__.py  backup_generator.py  unified_engine.py
dashboard/resources/: AC Shared Memory.txt  ACC Shared Memory.txt  Data Output from F1 24 v27.2x.txt  supabase_definitions.txt
dashboard/resources/dashboard-concepts/: EnduranceDashboard.tsx  F1Dashboard.tsx  F1DashboardV2.tsx  GTDashboard.tsx  RaceDashboard.tsx  TelemetryDashboard.tsx
dashboard/scripts/: build.bat  build.sh  run.bat  run.sh  setup.sh
docs/: AI_RACE_ENGINEER_README.md  AI_TESTING_INSTRUCTIONS.md  AtlasRacing.md  BACKEND.md  CLAUDE.md  DEBUG_GUIDE.md  FRONTEND.md  LAP_PREDICTION_ENHANCED_SYSTEM.md  MIGRATION_PLAN.md  MSYS2_SETUP_GUIDE.md  PRODUCT_ROADMAP.md  QUICK_TEST.md  README.md  TEST_QUESTIONS.md  WIDGET_DEVELOPMENT.md  WINDOWS_SETUP.md  action-plan.md  phase2_implementation_summary.md  phase7b_analysis_models_documentation.md  post_session_analysis_complete.md  recording_system_added.md  test_graph_improvements.md
research_data/: ANSWER!!.md  Atlas Racing Research Paper (Question and lookout).md  Research Overview for Supervisor.md
research_data/Phase-1/Race-1/: S1_control_R1_Melbourne_llm_interactions.json  S1_control_R1_Melbourne_race_summary.json
research_data/Phase-1/Race-10/: S1_control_R10_AbuDhabi_lap_telemetry.csv  S1_control_R10_AbuDhabi_llm_interactions.json  S1_control_R10_AbuDhabi_race_summary.json
research_data/Phase-1/Race-2/: S1_control_R2_Suzuka_lap_telemetry.csv  S1_control_R2_Suzuka_race_summary.json
research_data/Phase-1/Race-3/: S1_control_R3_Catalunya_lap_telemetry.csv  S1_control_R3_Catalunya_llm_interactions.json  S1_control_R3_Catalunya_race_summary.json
research_data/Phase-1/Race-4/: S1_control_R4_RedBullRing_lap_telemetry.csv  S1_control_R4_RedBullRing_llm_interactions.json  S1_control_R4_RedBullRing_race_summary.json
research_data/Phase-1/Race-5/: S1_control_R5_Silverstone_lap_telemetry.csv  S1_control_R5_Silverstone_llm_interactions.json  S1_control_R5_Silverstone_race_summary.json
research_data/Phase-1/Race-6/: S1_control_R6_Spa_lap_telemetry.csv  S1_control_R6_Spa_llm_interactions.json  S1_control_R6_Spa_race_summary.json
research_data/Phase-1/Race-7/: S1_control_R7_Monza_lap_telemetry.csv  S1_control_R7_Monza_llm_interactions.json  S1_control_R7_Monza_race_summary.json
research_data/Phase-1/Race-8/: S1_control_R8_Interlagos_lap_telemetry.csv  S1_control_R8_Interlagos_llm_interactions.json  S1_control_R8_Interlagos_race_summary.json
research_data/Phase-1/Race-9/: S1_control_R9_Zandvoort_lap_telemetry.csv  S1_control_R9_Zandvoort_llm_interactions.json  S1_control_R9_Zandvoort_race_summary.json
research_data/Race-1/: S1_control_R1_Melbourne_lap_telemetry.csv  S1_control_R1_Melbourne_race_summary.json
research_data/Race-2/: S1_control_R2_Suzuka_llm_interactions.json  S1_control_R2_Suzuka_race_summary.json
research_data/Race-3/: S1_control_R3_Catalunya_race_summary.json
tester/: CMakeLists.txt  QUICK_START.md  README.md  USAGE_GUIDE.md  build.bat  build_simple.bat  start_web_interface.bat  test_udp_connection.cpp
tester/recorder/: CMakeLists.txt  f124_file_format.h  f125_file_format.h  packet_recorder.cpp  packet_recorder_ac.cpp  packet_recorder_acc.cpp  packet_recorder_f125.cpp
tester/replayer/: CMakeLists.txt  packet_replayer.cpp  packet_replayer_ac.cpp  packet_replayer_acc.cpp  packet_replayer_f125.cpp
tester/scenarios/: README.md
tester/shared/: ac_types.h
tester/web_interface/: index.html  server.py
tools/: generate_track_svg.py
tools/atlas-core/: build.bat
tools/atlas-core/resources/: atlas_core.rc
tools/atlas-core/src/: main.cpp
(+235 files in other folders)
